# bevy_fortress

./: Cargo.toml  README.md
src/: lib.rs  prelude.rs
src/animations/: animations_plugin.rs  mod.rs
src/animations/components/: animation_asset_id.rs  animation_timer.rs  mod.rs  set_animation.rs  tags.rs
src/animations/components/bundles/: animation_bundle.rs  mod.rs
src/animations/events/: animation_event.rs  mod.rs
src/animations/loaders/: animation_loader.rs  mod.rs
src/animations/loaders/assets/: animation.rs  atlas.rs  mod.rs
src/animations/resources/: loaded_animations.rs  mod.rs
src/animations/systems/: add_animation_components.rs  animate.rs  load_unload_animations.rs  mod.rs  set_animations.rs
src/grid/: coord.rs  coord_math.rs  direction.rs  grid.rs  mod.rs
src/grid/shapes/: circle.rs  line.rs  mod.rs  rectangle.rs  shape.rs
src/grid/shapes/grid_extentions/: mod.rs
src/grid/shapes/iters/circle/: circle_circumference_iter.rs  circle_iter.rs
src/grid/shapes/iters/line/: line_bresenham_iter.rs  line_tunnel_horizontal_vertical.rs  line_tunnel_vertical_horizontal.rs  octant.rs
src/grid/shapes/iters/rectangle/: rectangle_border_iter.rs  rectangle_iter.rs
src/records/loaders/: fn_loader.rs  generic_loader.rs  mod.rs
src/settings/: camera_settings.rs  mod.rs  settings.rs  sound_settings.rs  window_settings.rs
